configs/5-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: brilliant-ingress
spec:
  rules:
    - host: brilliantapp.zad
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 5000
